--- a/less/global.less
+++ b/less/global.less
@@ -5,6 +5,7 @@
 
 html {
   font-size: 62.5%;
+  margin-top: 90px;
 }
 
 html, body {
