--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,5 +1,13 @@
 // Mixins Here
 
+.lockNavBar() {
+    position: fixed;
+    top: 0;
+    background-color: #F4F4F4;
+    z-index: 9999;
+    width: 100%;
+}
+
 .flex(@direction, @justify, @align) {
     display: flex;
     flex-direction: @direction;
